add new funcionalities: button contact way, css adjustments

--- a/View/admin.html
+++ b/View/admin.html
@@ -64,6 +64,9 @@
                                     <th>User Id</th>
                                     <th>Username</th>
                                     <th>Phone Number</th>
+                                    <th>Age</th>
+                                    <th>availabily</th>
+                                    <th>Contact Way</th>
                                 </tr>
                             </thead>
                             <tbody>
