--- a/View/chat.html
+++ b/View/chat.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script type="module" src="../app.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <title>Campi Bucaramanga</title>
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
@@ -14,6 +15,7 @@
     <main>
 
         <general-chat></general-chat>
+        <!-- <background-svg></background-svg> -->
         
 
     </main>
