--- a/View/chatBogota.html
+++ b/View/chatBogota.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script type="module" src="../app.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <title>Campi Bogota</title>
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
 </head>
