--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,8 @@ img {
     overflow-x: hidden;
     max-height: 600px;
     gap: 25px;
+
+    scrollbar-color:var(--bgDark);
     
 }
 .admin-title {
