--- a/css/styles.css
+++ b/css/styles.css
@@ -999,7 +999,7 @@ a{
     }
 
     .container-welcome{
-        margin-top: 60px;
+        margin-top: 65px;
     }
 
     .faq-answer {
@@ -1028,6 +1028,7 @@ a{
         font-size: 12px;
         padding: 6px;
         border-radius: 25px;
+        z-index: 6;
     }
 
     .faq-button-question{
