--- a/View/admin.html
+++ b/View/admin.html
@@ -1,122 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/admin.css" />
     <script type="module" src="../app/components/admin/admin.js" defer></script>
-</head>
-<body>
-    <div class="admin-container" >
-        <section class="adminSectionPanel" >
-            <h1 class="admin-title">Admin Panel</h1>
-            <div>
-                <input type="password" id="adminPassword" placeholder="Enter Password">
-                <button id="submitPassword">Submit</button>
+  </head>
+  <body>
+    <div class="admin-container">
+      <section class="adminSectionPanel">
+        <h1 class="admin-title">Admin Panel</h1>
+        <div>
+          <input
+            type="password"
+            id="adminPassword"
+            placeholder="Enter Password"
+          />
+          <button id="submitPassword">Submit</button>
+        </div>
+        <div
+          id="container-answersUsers"
+          class="container-answersUsers"
+          style="display: none"
+        >
+          <button id="landingInform" class="export-btn landing">
+            LANDING INFORM
+          </button>
+          <div class="buttons-title">
+            <label class="date-title">Fecha Inicio:</label>
+            <input class="form-date__input" type="date" id="startDate" />
+
+            <label class="date-title">Fecha Fin:</label>
+            <input class="form-date__input" type="date" id="endDate" />
+
+            <div class="form-group admin">
+              <label class="date-title">Ciudad</label>
+              <select id="ciudad" class="form-control adminControl">
+                <option value="">Seleccione su ciudad</option>
+                <option value="Bucaramanga">Bucaramanga</option>
+                <option value="Bogota">Bogotá</option>
+              </select>
             </div>
-            <div id="container-answersUsers" class="container-answersUsers" style="display: none;">
-                <button id="landingInform" class="export-btn landing">LANDING INFORM</button>
-                <div class="buttons-title">
-                    <label class="date-title">Fecha Inicio:</label>
-                    <input class="form-date__input" type="date" id="startDate">
 
-                    <label class="date-title">Fecha Fin:</label>
-                    <input class="form-date__input" type="date" id="endDate">
-
-                    <div class="form-group admin">
-                        <label class="date-title">Ciudad</label>
-                        <select id="ciudad" class="form-control adminControl">
-                            <option value=""> Seleccione su ciudad </option>
-                            <option value="Bucaramanga">Bucaramanga</option>
-                            <option value="Bogota">Bogotá</option>
-                        </select>
-                    </div>
-
-                    <button id="submitDateRange" class="export-btn">Consultar</button>
-                </div>
-                <div class="buttons-title">
-                    <h3 class="titleExport">Export table to:</h3>
-                    <button class="export-btn" id="btnXlsx">Xlsx</button>
-                    <button class="export-btn" id="btnXls">Xls</button>
-                    <button class="export-btn" id="btnCsv">CSV</button>
-                </div>
-                <div class="containerTables">
-                    <div id="dataTableContainer" style="display: none;">
-                    
-                        <table class="data-table" id="dataTable">
-                            <thead>
-                                <tr>
-                                    <th>User ID</th>
-                                    <th>Message</th>
-                                    <th>ID</th>
-                                    <th>Time</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Datos dinámicos -->
-                            </tbody>
-                        </table>
-                    </div>
-                    <div id="dataUserContainer" style="display: none;"> 
-                        <table class="data-table" id="userTable">
-                            <thead>
-                                <tr>
-                                    <th>User Id</th>
-                                    <th>Username</th>
-                                    <th>Phone Number</th>
-                                    <th>Age</th>
-                                    <th>availabily</th>
-                                    <th>Contact Way</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Datos dinámicos -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                
+            <button id="submitDateRange" class="export-btn">Consultar</button>
+          </div>
+          <div class="buttons-title">
+            <h3 class="titleExport">Export table to:</h3>
+            <button class="export-btn" id="btnXlsx">Xlsx</button>
+            <button class="export-btn" id="btnXls">Xls</button>
+            <button class="export-btn" id="btnCsv">CSV</button>
+          </div>
+          <div class="containerTables">
+            <div id="dataTableContainer" style="display: none">
+              <table class="data-table" id="dataTable">
+                <thead>
+                  <tr>
+                    <th>User ID</th>
+                    <th>Message</th>
+                    <th>ID</th>
+                    <th>Time</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Datos dinámicos -->
+                </tbody>
+              </table>
             </div>
-            <div id="container-landing" class="container-answersUsers" style="display: none;">
-                <div class="buttons-title">
-                    <h3 class="titleExport">Export table to:</h3>
-                    <button class="export-btn" id="btnXlsxLanding">Xlsx</button>
-                    <button class="export-btn" id="btnXlsLanding">Xls</button>
-                    <button class="export-btn" id="btnCsvLanding">CSV</button>
-                </div>
-                <div class="containerTables">
-                    <div id="landingTableContainer" style="display: none;">
-                    
-                        <table class="data-table" id="dataTableLanding">
-                            <thead>
-                                <tr>
-                                    <th>id</th>
-                                    <th>Nombre</th>
-                                    <th>Apellido</th>
-                                    <th>email</th>
-                                    <th>numero</th>
-                                    <th>compañia</th>
-                                    <th>posicion</th>
-                                    <th>Fecha creacion</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- Datos dinámicos -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <!-- Add this inside your container-landing div -->
-                <button id="returnToMainButton" class="export-btn">Return to Main View</button>
-
-                
+            <div id="dataUserContainer" style="display: none">
+              <table class="data-table" id="userTable">
+                <thead>
+                  <tr>
+                    <th>User Id</th>
+                    <th>Username</th>
+                    <th>Phone Number</th>
+                    <th>Age</th>
+                    <th>availabily</th>
+                    <th>Contact Way</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Datos dinámicos -->
+                </tbody>
+              </table>
             </div>
-            
-            <div id="errorMessage" style="color: red; display: none;">Invalid password</div>
-        </section>
-        
+          </div>
+        </div>
+        <div
+          id="container-landing"
+          class="container-answersUsers"
+          style="display: none"
+        >
+          <div class="buttons-title">
+            <h3 class="titleExport">Export table to:</h3>
+            <button class="export-btn" id="btnXlsxLanding">Xlsx</button>
+            <button class="export-btn" id="btnXlsLanding">Xls</button>
+            <button class="export-btn" id="btnCsvLanding">CSV</button>
+          </div>
+          <div class="containerTables">
+            <div id="landingTableContainer" style="display: none">
+              <table class="data-table" id="dataTableLanding">
+                <thead>
+                  <tr>
+                    <th>id</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>email</th>
+                    <th>numero</th>
+                    <th>compañia</th>
+                    <th>posicion</th>
+                    <th>Fecha creacion</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <!-- Datos dinámicos -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- Add this inside your container-landing div -->
+          <button id="returnToMainButton" class="export-btn">
+            Return to Main View
+          </button>
+        </div>
+
+        <div id="errorMessage" style="color: red; display: none">
+          Invalid password
+        </div>
+      </section>
     </div>
     <script src="/app/components/sheet/sheet.js"></script>
-</body>
+  </body>
 </html>
